[package]
name = "jotaro"
version = "0.1.0"
edition = "2021"
description = "minizip-ng wrapper"
license = "Zlib"
homepage = "https://github.com/degaart/jotaro"
repository = "https://github.com/degaart/jotaro"
readme = "Readme.txt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jotaro-sys = "0.1.0"
thiserror = "1.0"
